2010-04-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Generated tests are now just a thin layer around other tests.
	* tests/Makefile.am: Rewrite the rule to generate the `*-p.test'
	test scripts so that any of them simply includes the corresponding
	`*.test' script (after setting `$parallel_tests' to `yes').
	* tests/.gitignore: Add wildcard for temporary files used in the
	generation of `*-p.test' tests.

2010-03-30  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Avoid an unportable use of `$status' shell variable.
	* Makefile.am (path-check): Don't use the `$status' shell variable
	in the target's rules, as it's special in Zsh (equivalent to `$?',
	and readonly).

	Avoid another use of `chmod -R'.
	* Makefile.am (path-check): To be safe, do not use `chmod -R' on
	$(distdir) before removing it (as Solaris `chmod -R' touches
	symlink targets).  Instead, use the cleanup strategy used in
	distdir.am.

2010-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Remove uses of @acronym and @sc.
	* doc/automake.texi (Public Macros, Limitations on File Names):
	Remove all usage of @acronym and @sc in the manual.
	Suggested by Karl Berry.

2010-03-13  Karl Berry  <karl@freefriends.org>

	GNU hello uses fdl.texi, not gpl.texi.
	* doc/automake.texi (Texinfo): Adjust example to upstream
	change.

2010-03-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Formatting cleanups in macro comments.
	* automake.in, lib/Automake/Channels.pm,
	lib/Automake/FileUtils.pm, lib/Automake/Options.pm,
	lib/Automake/Variable.pm, lib/Automake/XFile.pm,
	m4/options.m4, m4/substnot.m4: Fix macro comment format.

2010-03-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid generation of `tests/defs-p' file.
	* tests/defs.in: In the generated `configure.in' snippet: call
	`AM_INIT_AUTOMAKE' with the `parallel-tests' option if the shell
	variable `parallel_tests' is set to `yes'.
	* tests/Makefile.am (defs-p): Target removed.