@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2009 Free Software Foundation, Inc.
+# Copyright (C) 2009, 2010 Free Software Foundation, Inc.
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,6 +17,8 @@
 # Ensure the right condition is listed after `else' and `endif'.
 
 . ./defs || Exit 1
+
+set -e
 
 cat >> configure.in << 'END'
 AM_CONDITIONAL([USE_A],[test x = y])
@@ -106,5 +108,3 @@ endif
 END
 
 $AUTOMAKE
-
-Exit 0
