@@ -1,3 +1,12 @@
+2010-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Avoid possible false negatives in cond46.test.
+	* tests/cond46.test: Enable shell `errexit' flag (and bumped
+	copyright years).  Due to this change, the testcase should now
+	fail on unexpected failures in calls to $ACLOCAL/$AUTOMAKE (whose
+	outcomes were previously unchecked), and on failures in grepping
+	the expected diagnostic in Automake stderr.
+
 2010-04-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	Generated tests are now just a thin layer around other tests.
